--- a/scss/medias-queries/_media-tablet.scss
+++ b/scss/medias-queries/_media-tablet.scss
@@ -72,7 +72,7 @@
         }
         p{
             color: black;
-            font-size: 10px;
+            font-size: 13px;
             text-align: center;
             margin: 30px;
             margin-top: 20px;
@@ -80,14 +80,14 @@
         }
         h2{
             text-align: center;
-            font-size: 20px;
+            font-size: 21px;
             margin-top: 0px;
             font: $title-font;
             background-color: rgb(236, 236, 236);
               }
         
         h3 {
-          font-size: 15px;
+          font-size: 18px;
             text-align: center;
             margin-top: 10px;
             font: $title-font;
@@ -101,7 +101,7 @@
           }
           li {
             list-style-type: none;
-            font-size: 10px;
+            font-size: 13px;
           }
           .icons {
             @include sizes(25px, 25px);
@@ -121,29 +121,29 @@
           .contacto-config{
             p{
                 text-align: left;
-                margin-top: 20px;
+                margin-top: 15px;
                 margin-bottom: 10px;
-                font-size: 12px;
+                font-size: 13px;
             }
             input {
                 border-radius: 5px;
                 text-align: center;
-                font-size: 12px;
+                font-size: 13px;
               }
               label {
                 margin-left: 30px;
                 border-radius: 5px;
-                font-size: 12px;
+                font-size: 13px;
               }
               #opciones {
                 margin-left: 30px;
                 border-radius: 5px;
-                font-size: 12px;
+                font-size: 13px;
               }
               textarea {
                 margin-left: 30px;
                 border-radius: 5px;
-                font-size: 12px;
+                font-size: 13px;
               }
               @keyframes moverAvion {
 
@@ -163,22 +163,22 @@
                   transform: translateX(5deg);
                 }   
               }
-              .icons-auto{
+              .icons-avion{
                 animation-name: moverAvion;
                 animation-duration: 10s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;  
-              position: fixed;
+              position: absolute;
               bottom: 400px;
               left: 300px;
               width: 75px;
               height: 40px;
               }
-              .icons-equipaje{
+              .icons-personas{
                 animation-name: moverPersonas;
                 animation-duration: 15s;
                 animation-iteration-count:infinite;
-              position: fixed;
+              position: absolute;
               bottom: 210px;
               left: 400px;
               width: 250px;
@@ -195,7 +195,7 @@
             position: relative;
             bottom: 0px;
             video{
-                @include sizes(250px, 150px);
+                @include sizes(270px, 165px);
                 position: relative;
                 bottom: 30px;
                 left: -1px;
@@ -214,7 +214,7 @@
                 margin: 10px;
                 border-style: solid;
                 border-radius: 10px;
-                @include sizes(289px, 177px);
+                @include sizes(309px, 197px);
               :hover {transform: scale(1.1);
               transition: 1s;
                 }
