--- a/scss/medias-queries/_media-mobile.scss
+++ b/scss/medias-queries/_media-mobile.scss
@@ -41,7 +41,8 @@
                 border-radius: 2px;
                 padding: 1px;
                 margin: 1px;
-                width: 50px;
+                position: relative;
+                bottom: 3px;
                 :hover {
                     background-color: rgb(252, 252, 252);
                     color: rgb(0, 0, 0);
@@ -165,7 +166,7 @@
               @keyframes moverAvion {
 
                 100%{
-                  transform: translateX(400px);
+                  transform: translateX(145px);
                 }
               }
               
@@ -182,12 +183,12 @@
               }
               .icons-avion{
                 animation-name: moverAvion;
-                animation-duration: 10s;
+                animation-duration: 5s;
                 animation-iteration-count: infinite;
                 animation-timing-function: linear;  
-              position: absolute;
-              bottom: 350px;
-              left: 150px;
+              position: relative;
+              bottom: 380px;
+              left: 0px;
               width: 75px;
               height: 40px;
               }
@@ -195,8 +196,8 @@
                 animation-name: moverPersonas;
                 animation-duration: 15s;
                 animation-iteration-count:infinite;
-              position:absolute;
-              bottom: 210px;
+              position:relative;
+              bottom: 300px;
               left: 200px;
               width: 150px;
               height: 100px;
